--- a/download.html
+++ b/download.html
@@ -23,10 +23,10 @@
 <h1><a href="./">tangle</a></h1>
 <h3>explorable explanations made easy</h3>
 
-<div id="menu">
-    <a id="menuGuide" href="guide.html">Getting Started</a> &nbsp; &nbsp; &nbsp;
-    <a id="menuReference" href="reference.html">API Reference</a> &nbsp; &nbsp; &nbsp;
-    <a id="menuDownload" href="download.html">Download</a>
+<div class="menu">
+    <a class="menuGuide" href="guide.html">Getting Started</a> &nbsp; &nbsp; &nbsp;
+    <a class="menuReference" href="reference.html">API Reference</a> &nbsp; &nbsp; &nbsp;
+    <a class="menuDownload" href="download.html">Download</a>
 </div>
 
 </div> <!-- header -->
@@ -38,16 +38,16 @@
 <div id="body" class="small">
 
 
-<h2>Download Tangle 0.1.0</h2>
+<h2>Download Tangle</h2>
 
 <p><b><a href="Downloads/Tangle-0.1.0.zip">Tangle-0.1.0.zip</a></b> &mdash; released June 14, 2011</p>
 
 <p>Or visit the project on <a href="https://github.com/worrydream/Tangle">github</a>.</p>
 
 
-<h2>What You'll Get</h2>
+<h2>What You Get</h2>
 
-<p><b><a href="Tangle.js">Tangle.js</a></b> is a lightweight library that provides a simple API for tangling up the values in your document.  Tangle.js has no depenencies, and works with any JavaScript framework, or none at all.</p>
+<p><b><a href="Tangle.js">Tangle.js</a></b> is a lightweight library that provides a simple API for tangling up the values in your document.  Tangle.js has no dependencies, and works with any JavaScript framework, or none at all.</p>
 
 <p><b><a href="TangleKit/">TangleKit</a></b> is an optional collection of UI components that let your readers adjust values and visualize the results.  You can grab whichever components you want, use them, extend them, modify them, or just learn from them and make your own.  TangleKit also includes (and depends on) a few helpful libraries, such as <a href="http://mootools.net/">MooTools</a>, <a href="http://www.diveintojavascript.com/projects/javascript-sprintf">sprintf</a>, and BVTouchable.</p>
 
@@ -61,7 +61,7 @@
 
 <ul style="margin-left:20px; list-style-type:disc;">
 <li>Let us know if the API makes it difficult to do something you want to do.</li>
-<li>Contribute UI components (Tangle classes) for possible inclusion with TangleKit.</li>
+<li>Contribute Tangle classes and formats for possible inclusion with TangleKit.</li>
 <li>Contribute documents you've made for possible inclusion in the examples.</li>
 <li>Report bugs.</li>
 <li>Tell your friends!</li>
@@ -79,7 +79,11 @@
 <div id="footer">
 <div id="footerShadow"></div>
 
-<p>Next: See more examples.</p>
+<div class="menu">
+    <a class="menuGuide" href="guide.html">Getting Started</a> &nbsp; &nbsp; &nbsp;
+    <a class="menuReference" href="reference.html">API Reference</a> &nbsp; &nbsp; &nbsp;
+    <a class="menuDownload" href="download.html">Download</a>
+</div>
 
 </div> <!-- footer -->
 
