--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 <h1><a href="./">tangle</a></h1>
 <h3>explorable explanations made easy</h3>
 
-<div id="menu">
-    <a id="menuGuide" href="guide.html">Getting Started</a> &nbsp; &nbsp; &nbsp;
-    <a id="menuReference" href="reference.html">API Reference</a> &nbsp; &nbsp; &nbsp;
-    <a id="menuDownload" href="download.html">Download</a>
+<div class="menu">
+    <a class="menuGuide" href="guide.html">Getting Started</a> &nbsp; &nbsp; &nbsp;
+    <a class="menuReference" href="reference.html">API Reference</a> &nbsp; &nbsp; &nbsp;
+    <a class="menuDownload" href="download.html">Download</a>
 </div>
 
 </div> <!-- header -->
@@ -167,7 +167,11 @@ will consume <b>&lt;span data-var="calories"&gt;</b> calories<b>&lt;/span&gt;</b
 <div id="footer">
 <div id="footerShadow"></div>
 
-<p>Next: See more examples.</p>
+<div class="menu">
+    <a class="menuGuide" href="guide.html">Getting Started</a> &nbsp; &nbsp; &nbsp;
+    <a class="menuReference" href="reference.html">API Reference</a> &nbsp; &nbsp; &nbsp;
+    <a class="menuDownload" href="download.html">Download</a>
+</div>
 
 </div> <!-- footer -->
 
