--- a/download.html
+++ b/download.html
@@ -42,10 +42,10 @@
 
 <p><b><a href="Downloads/Tangle-0.1.0.zip">Tangle-0.1.0.zip</a></b> &mdash; released June 14, 2011</p>
 
-<p>Or visit the project on <a href="https://github.com/worrydream/Tangle">github</a>.</p>
+<p>Or visit the project on <a href="https://github.com/worrydream/Tangle">GitHub</a>.</p>
 
 
-<h2>What You Get</h2>
+<h2>What's In The Box</h2>
 
 <p><b><a href="Tangle.js">Tangle.js</a></b> is a lightweight library that provides a simple API for tangling up the values in your document.  Tangle.js has no dependencies, and works with any JavaScript framework, or none at all.</p>
 
@@ -78,6 +78,8 @@
 
 <div id="footer">
 <div id="footerShadow"></div>
+
+<div class="author">by <a href="http://worrydream.com/">Bret Victor</a></div>
 
 <div class="menu">
     <a class="menuGuide" href="guide.html">Getting Started</a> &nbsp; &nbsp; &nbsp;
