--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script type="text/javascript" src="Examples/CookieExample.js"></script>
     <script type="text/javascript" src="Examples/ParkExample.js"></script>
     <script type="text/javascript" src="Examples/FilterExample.js"></script>
+    <script type="text/javascript" src="Examples/FilterExampleDSP.js"></script>
 
 </head>
 
@@ -56,7 +57,7 @@
 <p>Tangle is a JavaScript library for creating <b>reactive documents</b>.  Your readers can interactively explore
 possibilities, play with parameters, and see the document update immediately.</p>
 
-<p>This is a simple reactive document.<p>
+<p>This is a simple reactive document.</p>
 
 <div id="cookieExample" class="example">
     <div class="exampleTop"></div>
@@ -239,6 +240,14 @@ will consume <b>&lt;span data-var="calories"&gt;</b> calories<b>&lt;/span&gt;</b
 </div>
 
 
+<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+<!-- bottom -->
+
+<p style="text-align:center; margin-top:30px;">*&nbsp;&nbsp;&nbsp;*&nbsp;&nbsp;&nbsp;*</p>
+
+<p>For a single extensive example, see <a href="http://worrydream.com/TenBrighterIdeas/">Ten Brighter Ideas</a>.</p>
+<p>For the motivation and philosophy behind reactive documents, see <a href="http://worrydream.com/ExplorableExplanations/">Explorable Explanations</a>.</p>
+
 </div> <!-- body -->
 
 
@@ -247,6 +256,8 @@ will consume <b>&lt;span data-var="calories"&gt;</b> calories<b>&lt;/span&gt;</b
 
 <div id="footer">
 <div id="footerShadow"></div>
+
+<div class="author">by <a href="http://worrydream.com/">Bret Victor</a></div>
 
 <div class="menu">
     <a class="menuGuide" href="guide.html">Getting Started</a> &nbsp; &nbsp; &nbsp;
