--- a/reference.html
+++ b/reference.html
@@ -357,6 +357,8 @@ Tangle.formats.percent = function (value) {   // formats 0.42 as "42%"
 <div id="footer">
 <div id="footerShadow"></div>
 
+<div class="author">by <a href="http://worrydream.com/">Bret Victor</a></div>
+
 <div class="menu">
     <a class="menuGuide" href="guide.html">Getting Started</a> &nbsp; &nbsp; &nbsp;
     <a class="menuReference" href="reference.html">API Reference</a> &nbsp; &nbsp; &nbsp;
