--- a/download.html
+++ b/download.html
@@ -24,9 +24,10 @@
 <h3>explorable explanations made easy</h3>
 
 <div class="menu">
-    <a class="menuGuide" href="guide.html">Getting Started</a> &nbsp; &nbsp; &nbsp;
-    <a class="menuReference" href="reference.html">API Reference</a> &nbsp; &nbsp; &nbsp;
-    <a class="menuDownload" href="download.html">Download</a>
+    <a href="guide.html">Getting Started</a> &nbsp; &nbsp; &nbsp;
+    <a href="reference.html">API Reference</a> &nbsp; &nbsp; &nbsp;
+    <a href="download.html">Download</a> &nbsp; &nbsp; &nbsp;
+    <a href="https://groups.google.com/group/tangle-talk">Discuss</a>
 </div>
 
 </div> <!-- header -->
@@ -42,7 +43,9 @@
 
 <p><b><a href="Downloads/Tangle-0.1.0.zip">Tangle-0.1.0.zip</a></b> &mdash; released June 14, 2011</p>
 
-<p>Or visit the project on <a href="https://github.com/worrydream/Tangle">GitHub</a>.</p>
+<p>Visit the project on <a href="https://github.com/worrydream/Tangle">GitHub</a>.</p>
+
+<p>Join the brand new <a href="https://groups.google.com/group/tangle-talk">Tangle Talk</a> discussion group!</p>
 
 
 <h2>What's In The Box</h2>
@@ -55,11 +58,12 @@
 
 <h2>How You Can Help</h2>
 
-<p>This is an <b>alpha</b> release.  That means that the API is subject to change, and such changes may break your code.  TangleKit is currently a bit of a hodge-podge, and almost certainly will change.</p>
+<p>This is an <b>alpha</b> release.  That means that the API is subject to change, and such changes may break your code.  TangleKit is currently a hodge-podge, and almost certainly will change.</p>
 
 <p>But don't let that stop you. <b>Make things with Tangle!</b>  Here's how you can help:</p>
 
 <ul style="margin-left:20px; list-style-type:disc;">
+<li>Join the <a href="https://groups.google.com/group/tangle-talk">Tangle Talk</a> discussion group.</li>
 <li>Let us know if the API makes it difficult to do something you want to do.</li>
 <li>Contribute Tangle classes and formats for possible inclusion with TangleKit.</li>
 <li>Contribute documents you've made for possible inclusion in the examples.</li>
@@ -82,9 +86,10 @@
 <div class="author">by <a href="http://worrydream.com/">Bret Victor</a></div>
 
 <div class="menu">
-    <a class="menuGuide" href="guide.html">Getting Started</a> &nbsp; &nbsp; &nbsp;
-    <a class="menuReference" href="reference.html">API Reference</a> &nbsp; &nbsp; &nbsp;
-    <a class="menuDownload" href="download.html">Download</a>
+    <a href="guide.html">Getting Started</a> &nbsp; &nbsp; &nbsp;
+    <a href="reference.html">API Reference</a> &nbsp; &nbsp; &nbsp;
+    <a href="download.html">Download</a> &nbsp; &nbsp; &nbsp;
+    <a href="https://groups.google.com/group/tangle-talk">Discuss</a>
 </div>
 
 </div> <!-- footer -->
