--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
 <h3>explorable explanations made easy</h3>
 
 <div class="menu">
-    <a class="menuGuide" href="guide.html">Getting Started</a> &nbsp; &nbsp; &nbsp;
-    <a class="menuReference" href="reference.html">API Reference</a> &nbsp; &nbsp; &nbsp;
-    <a class="menuDownload" href="download.html">Download</a>
+    <a href="guide.html">Getting Started</a> &nbsp; &nbsp; &nbsp;
+    <a href="reference.html">API Reference</a> &nbsp; &nbsp; &nbsp;
+    <a href="download.html">Download</a> &nbsp; &nbsp; &nbsp;
+    <a href="https://groups.google.com/group/tangle-talk">Discuss</a>
 </div>
 
 </div> <!-- header -->
@@ -124,9 +125,9 @@ will consume <b>&lt;span data-var="calories"&gt;</b> calories<b>&lt;/span&gt;</b
 	<p>Suppose that an extra
 		<span data-var="tax" data-format="$%d" class="TKAdjustableNumber" data-min="0" data-max="50"></span> was charged to
 		<span data-var="percentCompliance" class="TKAdjustableNumber" data-min="0" data-max="100" data-step="5">%</span> of
-		<span data-var="isTaxPerVehicle" class="TKToggle TKIfElse"><span>vehicle registrations</span><span>California taxpayers</span></span>.
+		<span data-var="isTaxPerVehicle" class="TKToggle TKSwitch"><span>California taxpayers</span><span>vehicle registrations</span></span>.
 		Park admission would be <span data-var="newAdmission" data-format="free" class="TKAdjustableNumber" data-min="0" data-max="25"></span> for
-		<span data-var="newAdmissionAppliesToEveryone" class="TKToggle TKIfElse"><span>everyone</span><span>those who paid the charge</span></span>.
+		<span data-var="newAdmissionAppliesToEveryone" class="TKToggle TKSwitch"><span>those who paid the charge</span><span>everyone</span></span>.
 	</p>
 	
 	<p>This would <span data-var="deltaBudget" class="TKPlusMinus"><span>collect an extra</span><span>lose</span></span>
@@ -260,9 +261,10 @@ will consume <b>&lt;span data-var="calories"&gt;</b> calories<b>&lt;/span&gt;</b
 <div class="author">by <a href="http://worrydream.com/">Bret Victor</a></div>
 
 <div class="menu">
-    <a class="menuGuide" href="guide.html">Getting Started</a> &nbsp; &nbsp; &nbsp;
-    <a class="menuReference" href="reference.html">API Reference</a> &nbsp; &nbsp; &nbsp;
-    <a class="menuDownload" href="download.html">Download</a>
+    <a href="guide.html">Getting Started</a> &nbsp; &nbsp; &nbsp;
+    <a href="reference.html">API Reference</a> &nbsp; &nbsp; &nbsp;
+    <a href="download.html">Download</a> &nbsp; &nbsp; &nbsp;
+    <a href="https://groups.google.com/group/tangle-talk">Discuss</a>
 </div>
 
 </div> <!-- footer -->
